## Process this file with automake to produce Makefile.in

#lib_LTLIBRARIES		= libhello.la
#libhello_la_SOURCES	= hello.c
#libhello_la_LDFLAGS	= -version-info 0:0:0

bin_PROGRAMS		= cryptkeeper
cryptkeeper_SOURCES		= encfs_wrapper.cpp ConfigDialog.cpp ImportStashWizard.cpp CreateStashWizard.cpp PasswordChangeDialog.cpp main.cpp gtkstatusicon.c gtktrayicon-x11.c
#hello_LDADD		= libhello.la
